# python-lsp-mcp

./: .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  debug_capabilities.py  pyproject.toml  test_config.toml  test_mcp_tools.py  test_mcp_tools2.py  test_sample.py
.github/workflows/: codeql.yml  publish.yml  release.yml  semgrep.yml  test.yml  trivy.yml
configs/: example.toml
docs/: ARCHITECTURE.md
docs/development/: DEVELOPMENT_PLANS.md
docs/development_plans/: DEVELOPMENT_PLANS.md  FEATURE_01_RENAME_REFACTORING.md  FEATURE_02_BACKEND_SWITCHING.md  FEATURE_03_MOVE_REFACTORING.md  FEATURE_10_CODE_ACTIONS.md  FEATURE_11_DOCUMENT_FORMATTING.md  FEATURE_12_RANGE_FORMATTING.md  FEATURE_13_WORKSPACE_SYMBOLS.md
docs/publishing/: distribution.md  github.md  pypi.md
docs/setup/: claude-desktop.md  codex.md  cursor.md  gemini.md  generic.md  vscode.md
src/python_lsp_mcp/: __init__.py  __main__.py  config.py  lsp_client.py  lsp_manager.py  server.py
src/python_lsp_mcp/tools/: __init__.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_lsp.py  test_lsp_client.py  test_lsp_manager.py  test_sample.py
