[project]
name = "py-lsp-mcp"
dynamic = ["version"]
description = "MCP server for Python Language Server Protocol integration"
readme = "README.md"
authors = [
    { name = "Daniel Diaz Santiago", email = "daniel.diaz.stg@gmail.com" }
]
requires-python = ">=3.12"
license = "MIT"
keywords = ["mcp", "lsp", "language-server", "language-server-protocol", "model-context-protocol", "python", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.5.0",
    "pygls>=2.0.0",
    "lsprotocol>=2024.0.1",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/diaz3618/python-lsp-mcp"
Documentation = "https://github.com/diaz3618/python-lsp-mcp/blob/main/README.md"
Repository = "https://github.com/diaz3618/python-lsp-mcp"
Issues = "https://github.com/diaz3618/python-lsp-mcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
python-lsp-mcp = "python_lsp_mcp.__main__:main"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "python_lsp_mcp.__version__"}

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# Allow untyped decorators from MCP SDK
disallow_untyped_decorators = false
# Ignore untyped calls to external libraries
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = "pygls.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lsprotocol.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "mcp.*"
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

